code till Try AngularJS 1.5 - 12

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/mahavir2013/learning-ng1.5.x#readme",
   "dependencies": {
-    "angular": "^1.5.11"
+    "angular": "^1.5.11",
+    "bootstrap": "^3.3.7"
   }
 }
