--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
     "angular": "^1.5.11",
     "angular-resource": "^1.5.11",
     "angular-route": "^1.5.11",
+    "angular-utils-pagination": "^0.11.1",
     "bootstrap": "^3.3.7"
   }
 }
